# create_robot

./: .gitignore  .travis.yml  LICENSE  README.md  index.html  params.json
.github/workflows/: build_and_test.yml
ca_bumper2pc/: CMakeLists.txt  package.xml
ca_bumper2pc/include/ca_bumper2pc/: ca_bumper2pc.hpp
ca_bumper2pc/launch/: standalone.launch
ca_bumper2pc/plugins/: nodelet_plugins.xml
ca_bumper2pc/src/: ca_bumper2pc.cpp
ca_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ca_description/launch/: create_1.launch  create_2.launch  roomba_400.launch  spawn_create_2.launch
ca_description/meshes/: create_2.dae
ca_description/rviz/: robot_description.rviz
ca_description/urdf/: common_properties.xacro  create_1.urdf  create_1.urdf.xacro  create_1_gazebo.urdf  create_1_gazebo.urdf.xacro  create_2.urdf  create_2.urdf.xacro  create_2_base.urdf.xacro  create_2_gazebo.urdf  create_2_gazebo.urdf.xacro  create_base.urdf.xacro  create_base_gazebo.urdf.xacro  create_caster_wheel.xacro  create_wheel.xacro  roomblock.urdf.xacro  roomblock_gazebo.urdf.xacro
ca_description/urdf/sensors/: cliff_sensors.xacro  cliff_sensors_gazebo.xacro  imu_sensor.xacro  imu_sensor_gazebo.xacro  wall_sensor.xacro  wall_sensor_gazebo.xacro
ca_driver/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ca_driver/config/: default.yaml
ca_driver/include/create_driver/: create_driver.h
ca_driver/launch/: create.launch  create_1.launch  create_2.launch  roomba_400.launch
ca_driver/src/: create_driver.cpp
ca_driver2/: CMakeLists.txt  package.xml
ca_driver2/include/create_driver/: create_driver.h
ca_driver2/src/: create_driver.cpp
ca_gazebo/: CMakeLists.txt  package.xml
ca_gazebo/launch/: create_2.launch  create_2_sim.launch
ca_gazebo/worlds/: ca.world  willowgarage.world
ca_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ca_msgs/msg/: Bumper.msg  ChargingState.msg  CleanMode.msg  Cliff.msg  DefineSong.msg  Mode.msg  Overcurrent.msg  PlaySong.msg  Wheeldrop.msg
ca_navigation/ca_move_base/: CMakeLists.txt  package.xml
ca_navigation/ca_move_base/config/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
ca_navigation/ca_move_base/launch/: move_base.launch  navigate.launch
ca_navigation/ca_move_base/rviz/: navigation.rviz
ca_navigation/ca_move_base/src/: send_robot_goal.cpp
ca_navigation/ca_realsense/: CMakeLists.txt  package.xml
ca_navigation/ca_realsense/launch/: realsense_r200.launch
ca_navigation/ca_realsense/rviz/: realsense.rviz
ca_node/: CMakeLists.txt  package.xml  package.xml~
ca_node/launch/: create_1.launch
ca_node/plugins/: nodelet_plugins.xml
ca_node/scripts/: kinect_power.py  load_calib.py
ca_node/src/: CMakeLists.txt
ca_node/src/nodelet/: CMakeLists.txt  ca_nodelet.cpp
ca_safety_controller/: CMakeLists.txt  package.xml  package.xml~
ca_safety_controller/include/ca_safety_controller/: safety_controller.hpp
ca_safety_controller/launch/: standalone.launch
ca_safety_controller/plugins/: nodelet_plugins.xml
ca_safety_controller/src/: nodelet.cpp
ca_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
ca_tools/config/: log710.yaml  xbox360.yaml
ca_tools/launch/: joy_teleop.launch  keyboard_teleop.launch
ca_tools/scripts/: key_teleop.py
create_autonomy/: CHANGELOG.rst  CMakeLists.txt  package.xml
create_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
create_bringup/config/: default.yaml  dualshock4.yaml  log710.yaml  xbox360.yaml
create_bringup/launch/: create_1.launch  create_2.launch  joy_teleop.launch  roomba_400.launch
create_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
create_description/launch/: create_1.launch  create_2.launch  roomba_400.launch
create_description/meshes/: bumper_1.dae  bumper_2.dae  create_1.dae  create_2.dae
create_description/urdf/: create_1.urdf.xacro  create_2.urdf.xacro  create_base.urdf.xacro  create_base_gazebo.urdf.xacro
create_driver/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
create_driver/include/create_driver/: create_driver.h
create_driver/launch/: create.launch  create_1.launch  create_2.launch  roomba_400.launch
create_driver/src/: create_driver.cpp
create_gazebo/: CMakeLists.txt  package.xml
create_gazebo/launch/: create_gazebo.launch
create_gazebo/rviz/: default.rviz
create_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
create_msgs/msg/: Bumper.msg  Cliff.msg  Mode.msg  MotorSetpoint.msg
create_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
create_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
create_tools/config/: log710.yaml  xbox360.yaml
create_tools/launch/: joy_teleop.launch
