<?xml version="1.0"?>
<package format="3">
  <name>ca_description</name>
  <version>2.0.0</version>
  <description>Robot URDF descriptions for create_autonomy</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>
  <maintainer email="yutaka.kondo@youtalk.jp">Yutaka Kondo</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ca_description</url>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <!-- <depend>xacro</depend> -->
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
