<?xml version="1.0"?>
<package format="2">
  <name>ca_driver</name>
  <version>1.3.0</version>
  <description>ROS driver for iRobot's Create and Roomba platforms, based on libcreate</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ca_driver</url>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>ca_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>libcreate</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <exec_depend>ca_description</exec_depend>

  <export>
  </export>
</package>
