<?xml version="1.0"?>
<package format="3">
  <name>ca_driver</name>
  <version>2.0.0</version>
  <description>ROS 2 driver for iRobot's Create and Roomba platforms, based on libcreate</description>

  <maintainer email="yutaka.kondo@youtalk.jp">Yutaka Kondo</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/ca_driver</url>

  <author email="yutaka.kondo@youtalk.jp">Yutaka Kondo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ca_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <!-- <depend>diagnostic_updater</depend> -->
  <depend>geometry_msgs</depend>
  <depend>libcreate</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ca_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
