<?xml version="1.0"?>
<package format="2">
  <name>ca_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulations for iRobot Create platforms</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>

  <license>BSD</license>

  <author email="frankjoshua@gmail.com">Joshua Frank</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>ca_description</exec_depend>

  <export></export>
</package>
