<?xml version="1.0"?>
<package format="2">
  <name>ca_msgs</name>
  <version>1.3.0</version>
  <description>Common message definitions for create_autonomy</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ca_msgs</url>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
