<?xml version="1.0"?>
<package format="3">
  <name>ca_msgs</name>
  <version>2.0.0</version>
  <description>Common message definitions for create_autonomy</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>
  <maintainer email="yutaka.kondo@youtalk.jp">Yutaka Kondo</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ca_msgs</url>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>common_interfaces</depend>
  <depend>rosidl_default_runtime</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
