<?xml version="1.0"?>
<package format="2">
  <name>ca_tools</name>
  <version>1.3.0</version>
  <description>Launch and configuration files for common accessories when working with Create/Roomba platforms.</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ca_tools</url>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>

  <export>
  </export>
</package>
