<?xml version="1.0"?>
<package format="3">
  <name>ca_tools</name>
  <version>2.0.0</version>
  <description>Launch and configuration files for common accessories when working with Create/Roomba platforms.</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>
  <maintainer email="yutaka.kondo@youtalk.jp">Yutaka Kondo</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ca_tools</url>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
