<?xml version="1.0"?>
<package>
  <name>create_autonomy</name>
  <version>1.2.0</version>
  <description>create_autonomy is a ROS driver for iRobot's Create 1 and 2, based on the libcreate C++ library</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/create_autonomy</url>
  <url type="repository">http://github.com/AutonomyLab/create_autonomy</url>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ca_driver</run_depend>
  <run_depend>ca_tools</run_depend>
  <run_depend>ca_msgs</run_depend>
  <run_depend>ca_description</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
