<?xml version="1.0"?>
<package format="2">
  <name>create_autonomy</name>
  <version>1.3.0</version>
  <description>ROS driver for iRobot's Create 1 and 2, based on the libcreate C++ library</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/create_autonomy</url>
  <url type="repository">http://github.com/AutonomyLab/create_autonomy</url>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ca_description</exec_depend>
  <exec_depend>ca_driver</exec_depend>
  <exec_depend>ca_msgs</exec_depend>
  <exec_depend>ca_tools</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
