<?xml version="1.0"?>
<package format="3">
  <name>create_autonomy</name>
  <version>2.0.0</version>
  <description>ROS 2 driver for iRobot's Create 1 and 2, based on the libcreate C++ library</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>
  <maintainer email="yutaka.kondo@youtalk.jp">Yutaka Kondo</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/create_autonomy</url>
  <url type="repository">http://github.com/AutonomyLab/create_autonomy</url>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ca_description</depend>
  <depend>ca_driver</depend>
  <depend>ca_msgs</depend>
  <depend>ca_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
