<?xml version="1.0"?>
<package format="2">
  <name>create_bringup</name>
  <version>3.1.0</version>
  <description>Launch and configuration files for common accessories when working with Create/Roomba platforms.</description>

  <maintainer email="jacobmperron@gmail.com">Jacob Perron</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/create_bringup</url>

  <author email="jacobmperron@gmail.com">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>create_description</exec_depend>
  <exec_depend>create_driver</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>launch_xml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
