<?xml version="1.0"?>
<package format="2">
  <name>create_description</name>
  <version>3.1.0</version>
  <description>Robot URDF descriptions for create_robot</description>

  <maintainer email="jacobmperron@gmail.com">Jacob Perron</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/create_description</url>

  <author email="jacobmperron@gmail.com">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch_xml</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
