<?xml version="1.0"?>
<package format="2">
  <name>create_driver</name>
  <version>3.1.0</version>
  <description>ROS driver for iRobot's Create and Roomba platforms, based on libcreate</description>

  <maintainer email="jacobmperron@gmail.com">Jacob Perron</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/create_driver</url>

  <author email="jacobmperron@gmail.com">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>create_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>libcreate</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
