<?xml version="1.0"?>
<package format="2">
  <name>create_gazebo</name>
  <version>0.0.0</version>
  <description>The create_gazebo package</description>

  <maintainer email="sasilva1998@gmail.com">Steven Silva Mendoza</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>create_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>

  </export>
</package>
