<?xml version="1.0"?>
<package format="2">
  <name>create_msgs</name>
  <version>2.0.0</version>
  <description>Common message definitions for create_robot</description>

  <maintainer email="jacobmperron@gmail.com">Jacob Perron</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/create_msgs</url>

  <author email="jacobmperron@gmail.com">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
