<?xml version="1.0"?>
<package format="3">
  <name>create_msgs</name>
  <version>3.1.0</version>
  <description>Common message definitions for create_robot</description>

  <maintainer email="jacobmperron@gmail.com">Jacob Perron</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/create_msgs</url>

  <author email="jacobmperron@gmail.com">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
