<?xml version="1.0"?>
<package format="2">
  <name>create_robot</name>
  <version>3.1.0</version>
  <description>ROS driver for iRobot's Create 1 and 2, based on the libcreate C++ library</description>

  <maintainer email="jacobmperron@gmail.com">Jacob Perron</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/create_robot</url>
  <url type="repository">http://github.com/autonomylab/create_robot</url>

  <author email="jacobmperron@gmail.com">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>create_bringup</exec_depend>
  <exec_depend>create_description</exec_depend>
  <exec_depend>create_driver</exec_depend>
  <exec_depend>create_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
