<?xml version="1.0"?>
<package>
  <name>create_tools</name>
  <version>0.1.0</version>
  <description>The create_tools package</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/create_tools</url> -->

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joy_teleop</run_depend>

  <export>
  </export>
</package>
